# video-maker

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  justfile  run  test
src/: config.rs  fetch.rs  lib.rs  main.rs  paths.rs  voice.rs
src/config/: mod.rs
src/fetch/: mod.rs
src/reddit/: json.rs  mod.rs
src/video/: mod.rs
src/voice/: mod.rs
