[package]
name = "video-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.30"
dotenv = "0.15.0"
inquire = "0.6.2"
mp3-duration = "0.1.10"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
